--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,12 @@
-[build]
-  # This will be run the site build
-  command = "npm run build"
-  # This is the directory is publishing to netlify's CDN
-  publish = "build"
-  # Location of built function code
-  functions = "functions-build"
+[dev]
+  port = 3000
+  functions = "netlify/functions"
+  functions-port= 3002
+  publish = "public"
+
 
 [template.environment]
  	# Environment variables needed
-  INTERCOM_APP_ID = "Your Intercom App Id"
-  INTERCOM_CLIENT_ID = "Your Intercom Oauth Client Id"
-  INTERCOM_CLIENT_SECRET = "Your Intercom Oauth Secret"
+  APP_ID = "Your Intercom App Id"
+  CLIENT_ID = "Your Intercom Oauth Client Id"
+  CLIENT_SECRET = "Your Intercom Oauth Secret"
