--- a/package.json
+++ b/package.json
@@ -3,33 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
-    "react-scripts": "1.1.4",
     "request": "^2.87.0",
     "simple-oauth2": "^2.2.0"
   },
   "scripts": {
-    "start": "npm-run-all --parallel start:**",
-    "start:app": "react-scripts start",
-    "start:server": "netlify-lambda serve functions",
-    "build": "npm-run-all --parallel build:**",
-    "build:app": "react-scripts build",
-    "build:functions": "netlify-lambda build functions",
-    "test": "react-scripts test --env=jsdom",
-    "docs": "md-magic --path '**/*.md' --ignore 'node_modules'"
+    "dev": "netlify dev"
   },
   "devDependencies": {
-    "markdown-magic": "^0.1.23",
-    "netlify-lambda": "^0.4.0",
-    "npm-run-all": "^4.1.3"
-  },
-  "proxy": {
-    "/.netlify/functions": {
-      "target": "http://localhost:9000",
-      "pathRewrite": {
-        "^/\\.netlify/functions": ""
-      }
-    }
+    "netlify-cli": "17.19.1"
   }
 }
